tests/error/pointer_diff_mismatch.vbc
int main() {
    int a = 1;
    float b = 2.0;
    int* p = &a;
    float* q = &b;
    return p - q;
}
